# emma-chip-8

./: .gitignore  README.md  exe.sh  run.sh
clap-common/: Cargo.toml  test.sh
clap-common/src/: arg_matcher.rs  check_level_parser.rs  level_filter_parser.rs  lib.rs  macros.rs
ec8-assembler/: Cargo.toml  README.md
ec8-assembler/src/: args.rs  main.rs  program.rs
ec8-assembler/src/parser/: mod.rs
ec8-client/: Cargo.toml  README.md  build.sh
ec8-client/src/: main.rs
ec8-common/: Cargo.toml  README.md
ec8-common/src/: describe.rs  error.rs  graphics.rs  lib.rs  mnemonics.rs  nibbler.rs  opcodes.rs
ec8-core/: Cargo.toml  README.md
ec8-core/src/: error.rs  input.rs  lib.rs  runtime.rs
ec8-ll-compiler/: Cargo.toml  README.md
ec8-ll-compiler/src/: args.rs  main.rs
ec8-ll-compiler/src/ast/: addresses.rs  asm.rs  checks.rs  data.rs  mod.rs
ec8-ll-compiler/src/parser/: checks.rs  macros.rs  mod.rs
ec8-ll-compiler/src/parser/line/: mod.rs  models.rs  parsers.rs  utils.rs
ec8-ll-compiler/src/parser/line/tokens/: mod.rs  tokenisers.rs  util.rs  validators.rs
examples/: readme.md  test.c8  test.desc  test.eca  test.ecc
scripts/: build.sh  clean.sh  run-asm.sh  run-ll.sh
