[package]
name = "ec8-client"
version = "0.1.0"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Client for EmmaChip8"
publish = false
license-file = "LICENSE"
readme = "README.md"
keywords = ["chip8","emu"]

[[bin]]
name = "ec8"
path = "src/main.rs"

[[bin]]
name = "ec8-logging"
path = "src/main.rs"
required-features=["ec8-core/logging"]

[dependencies]
graphics-shapes = "0.1.6"
buffer-graphics-lib = "0.8.3"
pixels-graphics-lib = "0.7.2"
winit = "0.27.2"
ec8-core = {path="../ec8-core"}
ec8-common = {path="../ec8-common"}
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
clap = { version = "4.0.32",features=["cargo"] }